syntax = "proto3";
package echopb;
option go_package = "/echopb";

service EchoService {
  rpc Echo(EchoRequest) returns (EchoReply) {}
}

message EchoRequest {
  string message = 1;
}

message EchoReply {
  string message = 1;
}